# connor-graph-agent-mac

./: .gitattributes  .gitignore  ConnorGraphAgentMac.entitlements  ENGINEERING.md  ENVIRONMENT_AWARENESS_PHASE2_PLAN.md  LICENSE  LLM_TOOL_CONTRACT_DESIGN.md  MEMORY_OS_REFACTOR.md  MemoryOS_Architecture_and_Usage.md  NOTE_IMPORT_OPERATIONS.md  Package.swift  README.md  RELEASE_UPDATES.md  index.html
ConnorGraphAgentMac.xcodeproj/: project.pbxproj
Docs/: MemoryLeakRiskAudit-2026-06-25.md  commercial-chat-viewport-architecture.md  memory-os-background-pipeline-audit.md  memory-os-background-pipeline-runbook.md  memory-os-local-embedded-graph-search-plan.md  native-mail-commercial-demo.md  native-mail-release-checklist.md
Scripts/: connor-memory  package-macos-ad-hoc.sh  package-search-kernel.sh  verify-memory-os-release.sh
SearchKernel/: BUILD.md  Cargo.toml  README.md
SearchKernel/crates/connor_memory_search_kernel/: Cargo.toml
SearchKernel/crates/connor_memory_search_kernel/src/: document.rs  error.rs  ffi.rs  indexer.rs  lib.rs  query.rs  schema.rs  sqlite_import.rs  tokenizer.rs
assets/: index--O4A7xGJ.js  index-0dJ_iQ3y.js  index-8mVkuIue.js  index-9YPwj8nr.js  index-B28rIdt5.js  index-B4pNGeqZ.css  index-BJs6-fy_.js  index-BPEFgHgR.js  index-BVKAGpnq.css  index-BW2S5NO9.js  index-BjiEZ6UH.js  index-BpL83PU4.js  index-BqAMzZ2Z.js  index-BrfPJaB_.css  index-BuHtWtiA.js  index-BvLdbghP.css  index-BxK3fOnq.js  index-CEk6znYI.css  index-CGo-db3w.js  index-CSZ2Ra2q.js  index-CT7BR8yg.css  index-CVMe2jyC.js  index-CZJMvFM6.js  index-CaP-n5yN.js  index-Cc0Iw0yA.js  (+35 more)
(+1273 files in other folders)
