[package]
name = "connor_memory_search_kernel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "connor_memory_search_kernel"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.22"
jieba-rs = "0.7"
once_cell = "1"

[dev-dependencies]
tempfile = "3"
